# single-header-nn

./: CMakeLists.txt  README.md  nn.js  nn.txt  start.html  test.cpp  test.sh
compile-time-networks/: compile.sh  digit_recognition.cpp  ml.cpp  ml.h  my_math.cpp  my_math.h  run_digit.sh  test.cpp
compile-time-networks/src/: ml.h  ml_impl.h  my_math.h  my_math_impl.h  small_nn.h
examples/: digit_recognition.cpp
examples/visualizator/: nn.js  start.html
src/: small-nn.h
tests/: CMakeLists.txt  test_main.cpp
training/: main.cpp
visualizator/: nn.js  start.html
